Avoid wrapper instantiation when valueOf can be used