@@ -86,7 +86,7 @@ public class FeatureGraphGeneratorTest extends TestCase {
         SimpleFeature[] features = new SimpleFeature[lines.length];
 
         for (int i = 0; i < lines.length; i++) {
-            Integer id = new Integer(i);
+            Integer id = Integer.valueOf(i);
             features[i] =
                     SimpleFeatureBuilder.build(
                             schema, new Object[] {lines[i], id}, "fid" + id.toString());
