@@ -665,7 +665,7 @@ public class GML3MockData {
         builder.add("theName");
         builder.add("theDescription");
         builder.add(point());
-        builder.add(new Integer(1));
+        builder.add(Integer.valueOf(1));
         builder.add(new Date());
 
         return builder.buildFeature("fid.1");
