@@ -97,7 +97,7 @@ public abstract class JDBCDataStoreFactory implements DataStoreFactorySpi {
                     Integer.class,
                     "maximum number of open connections",
                     false,
-                    new Integer(10));
+                    Integer.valueOf(10));
 
     /** Minimum number of connections in the connection pool */
     public static final Param MINCONN =
@@ -106,7 +106,7 @@ public abstract class JDBCDataStoreFactory implements DataStoreFactorySpi {
                     Integer.class,
                     "minimum number of pooled connection",
                     false,
-                    new Integer(1));
+                    Integer.valueOf(1));
 
     /** If connections should be validated before using them */
     public static final Param VALIDATECONN =
