@@ -41,7 +41,7 @@ public class CalcUtil {
                 sum += nextValue;
             }
 
-            newSum = new Integer(sum);
+            newSum = Integer.valueOf(sum);
         } else if (newSum instanceof Long) {
             long sum = 0;
             long nextValue;
@@ -51,7 +51,7 @@ public class CalcUtil {
                 sum += nextValue;
             }
 
-            newSum = new Long(sum);
+            newSum = Long.valueOf(sum);
         } else if (newSum instanceof Float) {
             float sum = 0;
             float nextValue;
@@ -102,7 +102,7 @@ public class CalcUtil {
             // we've got 2 integers, but we're going to use double anyways
             return new Double(num1.doubleValue() / num2.doubleValue());
         } else if (division instanceof Long) {
-            return new Long(num1.longValue() / num2.longValue());
+            return Long.valueOf(num1.longValue() / num2.longValue());
         } else if (division instanceof Float) {
             return new Float(num1.floatValue() / num2.floatValue());
         } else if (division instanceof Double) {
@@ -120,7 +120,7 @@ public class CalcUtil {
     static Number average(Number[] numbers) {
         Number sum = sum(numbers);
 
-        return divide(sum, new Integer(numbers.length));
+        return divide(sum, Integer.valueOf(numbers.length));
     }
 
     /**
@@ -178,9 +178,9 @@ public class CalcUtil {
             Number newNum = (Number) var;
 
             if (type == Integer.class) {
-                return new Integer(newNum.intValue());
+                return Integer.valueOf(newNum.intValue());
             } else if (type == Long.class) {
-                return new Long(newNum.longValue());
+                return Long.valueOf(newNum.longValue());
             } else if (type == Float.class) {
                 return new Float(newNum.floatValue());
             } else if (type == Double.class) {
@@ -191,9 +191,9 @@ public class CalcUtil {
         } else { // direct cast
 
             if (type == Integer.class) {
-                return new Integer(((Integer) var).intValue());
+                return Integer.valueOf(((Integer) var).intValue());
             } else if (type == Long.class) {
-                return new Long(((Long) var).longValue());
+                return Long.valueOf(((Long) var).longValue());
             } else if (type == Float.class) {
                 return new Float(((Float) var).floatValue());
             } else if (type == Double.class) {
@@ -213,9 +213,9 @@ public class CalcUtil {
             Number newNum = (Number) var;
 
             if (newVar instanceof Integer) {
-                return new Integer(newNum.intValue());
+                return Integer.valueOf(newNum.intValue());
             } else if (newVar instanceof Long) {
-                return new Long(newNum.longValue());
+                return Long.valueOf(newNum.longValue());
             } else if (newVar instanceof Float) {
                 return new Float(newNum.floatValue());
             } else if (newVar instanceof Double) {
@@ -247,9 +247,9 @@ public class CalcUtil {
         } else if (bestClass == Float.class) {
             return new Float(0);
         } else if (bestClass == Long.class) {
-            return new Long(0);
+            return Long.valueOf(0);
         } else if (bestClass == Integer.class) {
-            return new Integer(0);
+            return Integer.valueOf(0);
         } else { // it's a type we don't have here yet
             return null;
         }
