@@ -108,7 +108,7 @@ public class MinVisitor implements FeatureCalc, FeatureAttributeVisitor {
     public void reset() {
         /** Reset the count and current minimum */
         this.visited = false;
-        this.minvalue = new Integer(0);
+        this.minvalue = Integer.valueOf(0);
     }
 
     public CalcResult getResult() {
