@@ -49,6 +49,6 @@ public class FilterFunction_boundaryDimension extends FunctionExpressionImpl {
                     "Filter Function problem for function boundaryDimension argument #0 - expected type Geometry");
         }
 
-        return new Integer(StaticGeometry.boundaryDimension(arg0));
+        return Integer.valueOf(StaticGeometry.boundaryDimension(arg0));
     }
 }
