@@ -148,7 +148,7 @@ public class FilterFunction_in10 extends FunctionExpressionImpl {
                     "Filter Function problem for function in10 argument #10 - expected type Object");
         }
 
-        return new Boolean(
+        return Boolean.valueOf(
                 StaticGeometry.in10(
                         arg0, arg1, arg2, arg3, arg4, arg5, arg6, arg7, arg8, arg9, arg10));
     }
