@@ -98,6 +98,6 @@ public class FilterFunction_in5 extends FunctionExpressionImpl {
                     "Filter Function problem for function in5 argument #5 - expected type Object");
         }
 
-        return new Boolean(StaticGeometry.in5(arg0, arg1, arg2, arg3, arg4, arg5));
+        return Boolean.valueOf(StaticGeometry.in5(arg0, arg1, arg2, arg3, arg4, arg5));
     }
 }
