@@ -118,6 +118,6 @@ public class FilterFunction_in7 extends FunctionExpressionImpl {
                     "Filter Function problem for function in7 argument #7 - expected type Object");
         }
 
-        return new Boolean(StaticGeometry.in7(arg0, arg1, arg2, arg3, arg4, arg5, arg6, arg7));
+        return Boolean.valueOf(StaticGeometry.in7(arg0, arg1, arg2, arg3, arg4, arg5, arg6, arg7));
     }
 }
