@@ -59,6 +59,6 @@ public class FilterFunction_within extends FunctionExpressionImpl {
                     "Filter Function problem for function within argument #1 - expected type Geometry");
         }
 
-        return new Boolean(StaticGeometry.within(arg0, arg1));
+        return Boolean.valueOf(StaticGeometry.within(arg0, arg1));
     }
 }
