@@ -60,6 +60,6 @@ public class FilterFunction_min_2 extends FunctionExpressionImpl {
                     "Filter Function problem for function min argument #1 - expected type long");
         }
 
-        return new Long(Math.min(arg0, arg1));
+        return Long.valueOf(Math.min(arg0, arg1));
     }
 }
