@@ -207,7 +207,7 @@ public class FeatureTypeTest extends DataTestCase {
     public void testDeepCopy() throws Exception {
         // primative
         String str = "FooBar";
-        Integer i = new Integer(3);
+        Integer i = Integer.valueOf(3);
         Float f = new Float(3.14);
         Double d = new Double(3.14159);
 
