@@ -186,12 +186,12 @@ public class FilterTest extends TestCase {
         Object[] attributes = new Object[17];
         GeometryFactory gf = new GeometryFactory(new PrecisionModel());
         attributes[0] = gf.createLineString(coords);
-        attributes[1] = new Boolean(true);
+        attributes[1] = Boolean.valueOf(true);
         attributes[2] = new Character('t');
-        attributes[3] = new Byte("10");
-        attributes[4] = new Short("101");
-        attributes[5] = new Integer(1002);
-        attributes[6] = new Long(10003);
+        attributes[3] = Byte.valueOf("10");
+        attributes[4] = Short.valueOf("101");
+        attributes[5] = Integer.valueOf(1002);
+        attributes[6] = Long.valueOf(10003);
         attributes[7] = new Float(10000.4);
         attributes[8] = new Double(100000.5);
         attributes[9] = "test string data";
@@ -349,21 +349,21 @@ public class FilterTest extends TestCase {
             boolean test2,
             boolean test3)
             throws IllegalFilterException {
-        Literal testLiteral = new LiteralExpressionImpl(new Integer(1001));
+        Literal testLiteral = new LiteralExpressionImpl(Integer.valueOf(1001));
         org.opengis.filter.Filter filter = compare(filterType, testAttribute, testLiteral);
 
         // LOGGER.finer( filter.toString());
         // LOGGER.finer( "contains feature: " + filter.contains(testFeature));
         assertEquals(filter.evaluate(testFeature), test1);
 
-        testLiteral = new LiteralExpressionImpl(new Integer(1002));
+        testLiteral = new LiteralExpressionImpl(Integer.valueOf(1002));
         filter = compare(filterType, testAttribute, testLiteral);
 
         // LOGGER.finer( filter.toString());
         // LOGGER.finer( "contains feature: " + filter.contains(testFeature));
         assertEquals(filter.evaluate(testFeature), test2);
 
-        testLiteral = new LiteralExpressionImpl(new Integer(1003));
+        testLiteral = new LiteralExpressionImpl(Integer.valueOf(1003));
         filter = compare(filterType, testAttribute, testLiteral);
 
         // LOGGER.finer( filter.toString());
@@ -1171,11 +1171,11 @@ public class FilterTest extends TestCase {
 
         literal = new LiteralExpressionImpl(1);
         assertEquals(ExpressionType.LITERAL_INTEGER, Filters.getExpressionType(literal));
-        assertEquals(new Integer(1), literal.evaluate((Feature) null));
+        assertEquals(Integer.valueOf(1), literal.evaluate((Feature) null));
 
         literal = new LiteralExpressionImpl(1L);
         assertEquals(ExpressionType.LITERAL_LONG, Filters.getExpressionType(literal));
-        assertEquals(new Long(1), literal.evaluate((Feature) null));
+        assertEquals(Long.valueOf(1), literal.evaluate((Feature) null));
 
         literal = new LiteralExpressionImpl("string value");
         assertEquals(ExpressionType.LITERAL_STRING, Filters.getExpressionType(literal));
