@@ -111,7 +111,7 @@ public class PostgisNGDataStoreFactory extends JDBCDataStoreFactory {
                             + "However this allows to push more of the filter into the database, increasing performance."
                             + "the postgis table.",
                     false,
-                    new Boolean(true),
+                    Boolean.valueOf(true),
                     new KVP(Param.LEVEL, "advanced"));
 
     /** Enables usage of ST_Simplify when the queries contain geometry simplification hints */
