@@ -55,10 +55,10 @@ public class OracleDialectEpsgMediator extends AbstractEpsgMediator {
                 priority,
                 new Hints(
                         Hints.AUTHORITY_MAX_ACTIVE,
-                        new Integer(2),
+                        Integer.valueOf(2),
                         new Object[] {
                             Hints.AUTHORITY_MIN_EVICT_IDLETIME,
-                            new Integer(1 * 60 * 1000),
+                            Integer.valueOf(1 * 60 * 1000),
                             Hints.CACHE_POLICY,
                             "none",
                             Hints.EPSG_DATA_SOURCE,
