@@ -83,7 +83,7 @@ public class OracleDialectEpsgMediatorStarvationOnlineStressTest extends OracleO
 
         wrappedDS = (BasicDataSource) datasource;
         hints = new Hints(Hints.CACHE_POLICY, "none");
-        hints.put(Hints.AUTHORITY_MAX_ACTIVE, new Integer(MAX_WORKERS));
+        hints.put(Hints.AUTHORITY_MAX_ACTIVE, Integer.valueOf(MAX_WORKERS));
 
         mediator = new OracleDialectEpsgMediator(80, hints, datasource);
         codes = getCodes();
@@ -135,7 +135,7 @@ public class OracleDialectEpsgMediatorStarvationOnlineStressTest extends OracleO
             System.out.println("Overall Time: " + timeElapsed);
             System.out.println(
                     "Throughput: "
-                            + (1000 * totalRuns / new Long(totalTime).doubleValue())
+                            + (1000 * totalRuns / Long.valueOf(totalTime).doubleValue())
                             + " Hz");
             System.out.println("Min: " + minTime);
             System.out.println("Max: " + maxTime);
@@ -157,7 +157,7 @@ public class OracleDialectEpsgMediatorStarvationOnlineStressTest extends OracleO
             sb.append(", ");
             sb.append(totalRuns);
             sb.append(", ");
-            sb.append((1000 * totalRuns / new Long(totalTime).doubleValue()));
+            sb.append((1000 * totalRuns / Long.valueOf(totalTime).doubleValue()));
             sb.append(", ");
             sb.append(minTime);
             sb.append(", ");
