@@ -169,7 +169,7 @@ public class SolrFeatureSource extends ContentFeatureSource {
                 HttpSolrClient server = store.getSolrServer();
                 QueryResponse rsp = server.query(q);
                 count =
-                        new Long(rsp.getResults().getNumFound() - rsp.getResults().getStart())
+                        Long.valueOf(rsp.getResults().getNumFound() - rsp.getResults().getStart())
                                 .intValue();
                 // Manage max manually
                 if (query.getMaxFeatures() > 0 && query.getMaxFeatures() < Integer.MAX_VALUE) {
